@@ -58,6 +58,9 @@ Trunk (not yet released)
     AVRO-1302. Python: Update documentation to open files as binary to
     prevent EOL substitution. (Lars Francke via cutting)
 
+    AVRO-1598. Java: Fix flakiness in TestFileSpanStorage.
+    (Ryan Blue via cutting)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
